# rhythm

./: .gitignore  CMakeLists.txt
assets/: fxconv-metadata.txt
src/: main.c
